fix(@clayui/css): Panel adjust spacing for `panel-unstyled` to prevent visual jump on close.
fix(@clayui/css): Panel adds Sass maps `$panel-group-panel-unstyled`, `$panel-group-sm-panel-unstyled`, `$panel-group-flush-panel-unstyled`

fix(@clayui/css): Cadmin Panel apply these updates

--- a/packages/clay-css/src/scss/cadmin/components/_panels.scss
+++ b/packages/clay-css/src/scss/cadmin/components/_panels.scss
@@ -152,6 +152,10 @@
 				transparent;
 		}
 	}
+
+	.panel-unstyled {
+		@include clay-panel-variant($cadmin-panel-group-panel-unstyled);
+	}
 }
 
 // Panel Group Fluid
@@ -180,6 +184,10 @@
 				}
 			}
 		}
+	}
+
+	.panel-unstyled {
+		@include clay-panel-variant($cadmin-panel-group-flush-panel-unstyled);
 	}
 }
 
@@ -310,6 +318,10 @@
 .panel-group-sm {
 	.panel {
 		@include clay-panel-variant($cadmin-panel-group-sm);
+	}
+
+	.panel-unstyled {
+		@include clay-panel-variant($cadmin-panel-group-sm-panel-unstyled);
 	}
 }
 
